[package]
name = "wasm"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
z048 = { git = "https://github.com/z048/z048.git" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"

[profile.release]
opt-level = "z"
lto = true
